fix: add overflow prop, organise css, apply PR comments

--- a/src/core/Chip/styles.css
+++ b/src/core/Chip/styles.css
@@ -1,12 +1,12 @@
 .container {
+    display: inline-flex;
     align-items: center;
+    height: 32px;
     background-color: #eceff1;
     border-radius: 16px;
-    cursor: pointer;
-    display: inline-flex;
-    font-size: 14px;
-    height: 32px;
     margin: 4px;
+    font-size: 14px;
+    cursor: pointer;
     user-select: none;
 }
 
@@ -58,26 +58,29 @@
 }
 
 .image-icon {
-    border-radius: 50%;
     height: 24px;
-    margin-left: 4px;
     width: 24px;
+    border-radius: 50%;
+    margin-left: 4px;
 }
 
 .label {
     margin: 0 12px;
-    max-width: 150px;
-    overflow: hidden;
-    text-overflow: ellipsis;
     white-space: nowrap;
 }
 
+.label.overflow {
+    max-width: 150px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .remove-icon {
-    color: #494949;
-    cursor: pointer;
-    font-size: 18px;
-    margin-right: 4px;
     opacity: 1;
+    margin-right: 4px;
+    color: #494949;
+    font-size: 18px;
+    cursor: pointer;
     pointer-events: all;
 }
 
